fixed style sheet

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
+  <link type="text/css" rel="stylesheet" href="/styles/site-plan-rafting.css" />
 </head>
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
+    <h1>A+ webstie Site Plan</h1>
+    <h2>Isaac Parsons</h2>
     <h2>WDD 130</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
@@ -19,18 +19,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>Our puprose is to introduce people to the amazing world of White water rafting In the northwest of our beautiful country</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>Nerds who need to touch water</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
-    <h3>Website Logo</h3>
+    <h3>Rafting with white water &copy; </h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="/images/wwww_logo.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -61,11 +61,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Oswald
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Raleway
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
