--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,26 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Isaac Parsons | WDD130 | Home</title>
-    <!-- comment-->
-
+    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
 <body>
     <header>
+        <a id = "logo_link" href="index.html"><img class="logo" src="images/logo.png" alt = "Dry Oar logo"></a>
         <nav>
-      <a href="index.html">White Water Rafting Website</a>
-      <a href="site-plan-rafting.html">White Water Rafting Siteplan</a>
-      <a href="positioning.html">Positioning Activity</a>
-      <a href="#">Personal Website</a>
-      <a href="#">Personal Siteplan</a>
+            <a href="index.html">Home</a>
+            <a href= #>page2</a>
+            <a href="site-plan-rafting.html"></a>
+            <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-    <main>
-        <h1>Isaac Parsons</h1>
-        <img src="images/Isaac_photo_name_thing.jpg" alt="Image of me" width ="300">
-        <p>I am Isaac. I am taking the Cybersecurity major hear at BYUI, I enjoy Coding, listening to music, biking, hiking, Blacksmithing, and doing random stuff on thursday evenings.</p>
-     <p>Top scripture is Jacob 6:12: O be wise; What can I say more?</p>
+    <div id = "hero">
+        <div id = "hero-box">
+            <img id = "hero-img" src = "images/hero.png" alt = "People enjoying white water rafting">
+        </div>
+        <section id = "hero-msg">
+            <h1 class = "home-title">Have an adventure with our semi-reputable company</h1>
+            <h4>Make memories with dry Oar</h4>
+            <div class ="button-box">
+                <a class = "book" href="contactus.html">Book Urgently, or within a time frame your comfrotable with</a>
+            </div>
+        </section>
+    </div>
+    <main class = "home-grid">
+        <section class = "">
+            <img class = "" src>
+            <img class = "" src>
+            <h2></h2>
+        <section class = "">
+            <img class = "" src>
+            <img class = "" src>
+            <h2></h2>
+        <section class = "">
+            <img class = "" src>
+            <img class = "" src>
+            <h2></h2>
+        </section>
     </main>
-    <footer> &copy; 2026 Isaac Parsons</footer>
+
 </body>
 </html>
