--- a/ice/prophet_cards/nelson.html
+++ b/ice/prophet_cards/nelson.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Russell M. Nelson</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="/ice/ice_style/Prophetcard.css">
+    <link rel="stylesheet" href="../ice_style/Prophetcard.css">
     <style>
         /* Insert styles here, this is called an internal stylesheet  */
         body {
@@ -19,7 +19,7 @@
         <h2>
             <a href="https://www.churchofjesuschrist.org/">17th president of the Church of Jesus Christ of Latter-day Saints</a>
         </h2>
-        <img src="\ice\images_ice\russell_nelson.png" alt="president Nelson photo">
+        <img src="..\images_ice\russell_nelson.png" alt="president Nelson photo">
         <ul>
             <li> Born: Sep 9, 1924</li>
             <li> Apostle: Apr 7, 1984</li>
